src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --toastify-toast-min-height: 43px;
}

.Toastify__toast-container--top-center {
  top: 7rem !important; /* Ensure top toast has a gap */
}

.checkbox-custom {
  @apply relative m-[3px] h-[18px] w-[18px] min-w-[18px] cursor-pointer appearance-none rounded bg-cool-grayscale-300;
}

.checkbox-custom {
  background-image: url("/images/check_icon.png");
  background-size: 12px 8px;
  background-repeat: no-repeat;
  background-position: center;
}

.checkbox-custom:checked {
  @apply border-none bg-primary-700;
}

.text-emphasis {
  position: relative;
  display: inline-block;
}

.text-emphasis::after {
  content: ".";
  position: absolute;
  top: -1.5rem;
  transform: translateX(-50%);
  width: 4px;
  height: 4px;
  color: white;
}

@media (min-width: 560px) {
  .custom-right {
    right: calc((100% - 560px) * 0.52);
  }
}

@media (max-width: 560px) {
  .custom-right {
    right: 9%;
  }
}

@keyframes modalOpen {
  0% {
    transform: scaleY(0);
    opacity: 0;
  }
  50% {
    transform: scaleY(1.05);
    opacity: 1;
  }
  100% {
    transform: scaleY(1);
  }
}

@keyframes fadeIn {
  0% {
    opacity: 0;
    transform: scale(0.9);
  }

  100% {
    opacity: 1;
    transform: scale(1);
  }
}
@keyframes fadeInFooter {
  0% {
    opacity: 0;
    transform: scale(0.9);
  }
  50% {
    opacity: 0;
    transform: scale(1);
  }
  100% {
    opacity: 1;
    transform: scale(1);
  }
}

@keyframes fadeOut {
  0% {
    opacity: 1;
    transform: scale(1);
  }
  100% {
    opacity: 0;
    transform: scale(0.9);
  }
}

@keyframes slideIn {
  from {
    transform: translateX(-100%);
  }
  to {
    transform: translateX(0);
  }
}

@keyframes slideOut {
  from {
    transform: translateX(0);
  }
  to {
    transform: translateX(-100%);
  }
}

@keyframes slideUp {
  0% {
    transform: translateY(100%);
  }
  100% {
    transform: translateY(0);
  }
}

@keyframes slideDown {
  0% {
    transform: translateY(0);
  }
  100% {
    transform: translateY(100%);
  }
}

.animate-slideUp {
  animation: slideUp 1s ease forwards;
}

.animate-fadeIn-footer {
  animation: fadeInFooter 2s ease-in-out forwards;
}

.animate-fadeOut {
  animation: fadeOut 3s ease-out forwards;
}

.animate-slideDown {
  animation: slideDown 0.7s ease forwards;
}

.animate-slideIn {
  animation: slideIn 0.4s ease-out;
}
.animate-slideOut {
  animation: slideOut 1s forwards;
}

.animate-fadeIn {
  animation: fadeIn 0.5s ease-in-out;
}

.animate-modalOpen {
  animation: modalOpen 0.5s ease-out;
}

/* 슬라이더 기본 스타일 제거 및 커스텀 스타일 적용 */
input[type="range"] {
  -webkit-appearance: none; /* 기본 스타일 제거 */
  appearance: none; /* 기본 스타일 제거 */
  width: 100%;
  height: 12px;
  background: #e2e8f0;
  cursor: pointer;
}

/* 슬라이더 트랙 */
input[type="range"]::-webkit-slider-runnable-track {
  height: 12px;
  border-radius: 9999px;
}

/* 슬라이더 핸들 */
input[type="range"]::-webkit-slider-thumb {
  width: 44px;
  height: 28px;
  border-radius: 8px;
  appearance: none;
  cursor: pointer;
  background-color: #020617;
  background-image: url("/images/icons/checkbox.png"); /* 아이콘 이미지 추가 */
  background-size: 16px 16px;
  background-repeat: no-repeat;
  background-position: center; /* 아이콘을 중앙에 위치 */
  transform: translateY(-8px); /* 핸들을 트랙의 가운데로 조정 */
}

/* Firefox용 */
input[type="range"]::-moz-range-track {
  height: 12px;
  border-radius: 9999px;
}

input[type="range"]::-moz-range-thumb {
  width: 44px;
  height: 28px;
  border-radius: 8px;
  background-color: #020617;
  background-image: url("/images/icons/checkbox.png");
  background-size: 16px 16px;
  background-repeat: no-repeat;
  background-position: center;
  transform: translateY(-8px);
}

